--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-screens": "~1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.1",
     "react-navigation-stack": "^1.10.2",
+    "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4"
   },
